# template-streamlit-chat-app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
readme/: code-standards.md
src/: home.py  main.py
src/pages/: chat.py  state.py
src/ui/: sidebar.py
track/: TODO.md  WORKLOG,md
